@@ -1,5 +1,9 @@
 2004-09-23  David Malcolm  <david@davemalcolm.demon.co.uk>
 
+	* cong-text-cache.c: 
+
+	Allow NULL pango_attrs, since this is required by CongEditorNodeComment
+
 	* cong-primary-window.c: 
 
 	Cleanup of statusbar updating
